--- a/force-app/main/default/classes/Calculators.cls
+++ b/force-app/main/default/classes/Calculators.cls
@@ -8,4 +8,7 @@ public with sharing class Calculators {
     public integer sub(integer a, integer b) {
         return a-b;
     }
+    public integer mul(integer a, integer b) {
+        return a*b;
+    }
 }
